cluster/apps/atomic/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atomic-server
  labels:
    app: atomic-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atomic-server
  template:
    metadata:
      labels:
        app: atomic-server
    spec:
      containers:
        - name: atomic-server
          image: ghcr.io/kenforthewin/atomic-server:1.35.1
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: atomic-data
              mountPath: /data
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: atomic-data
          persistentVolumeClaim:
            claimName: pvc-atomic

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atomic-web
  labels:
    app: atomic-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atomic-web
  template:
    metadata:
      labels:
        app: atomic-web
    spec:
      containers:
        - name: atomic-web
          image: ghcr.io/kenforthewin/atomic-web:1.35.1
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
