cluster/apps/atomic/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: atomic-server
  labels:
    app: atomic-server
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: atomic-server

---
apiVersion: v1
kind: Service
metadata:
  name: atomic-web
  labels:
    app: atomic-web
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: atomic-web

---
apiVersion: v1
kind: Service
metadata:
  name: atomic-proxy
  labels:
    app: atomic-proxy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: atomic-proxy
