cluster/apps/atomic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atomic
  labels:
    app: atomic
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    hajimari.io/enable: "true"
    hajimari.io/icon: "book-open-page-variant"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - atomic.kblb.io
      secretName: my-certs-atomic
  rules:
    - host: atomic.kblb.io
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: atomic-server
                port:
                  name: http
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: atomic-server
                port:
                  name: http
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: atomic-server
                port:
                  name: http
          - path: /.well-known/
            pathType: Prefix
            backend:
              service:
                name: atomic-server
                port:
                  name: http
          - path: /oauth/
            pathType: Prefix
            backend:
              service:
                name: atomic-server
                port:
                  name: http
          - path: /mcp
            pathType: Prefix
            backend:
              service:
                name: atomic-server
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atomic-web
                port:
                  name: http
